packages/unnu_ce/lib/src/bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: unused_import

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:unnu_ce/src/bindings.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void unnu_soar_init(
  ffi.Pointer<ffi.Char> path,
);

@ffi.Native<ffi.Void Function()>()
external void unnu_soar_destroy();

@ffi.Native<ffi.Void Function()>()
external void unnu_soar_start();

@ffi.Native<ffi.Void Function()>()
external void unnu_soar_stop();

@ffi.Native<ffi.Void Function()>()
external void unnu_soar_reset();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void unnu_oga_init(
  ffi.Pointer<ffi.Char> model_path,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void unnu_oga_prompt(
  ffi.Pointer<ffi.Char> prompt,
);

@ffi.Native<ffi.Void Function(OgaResultCallback)>()
external void unnu_set_oga_result_callback(
  OgaResultCallback callback,
);

@ffi.Native<ffi.Void Function()>()
external void unnu_unset_oga_result_callback();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>, UnnuTokenizerConfig_t)>()
external void unnu_cner_init(
  ffi.Pointer<ffi.Char> model_path,
  UnnuTokenizerConfig_t tokenizer_cfg,
);

@ffi.Native<ffi.Void Function()>()
external void unnu_cner_destroy();

final class UnnuSentence extends ffi.Struct {
  external ffi.Pointer<ffi.Char> text;

  @ffi.Int()
  external int length;
}

typedef UnnuSentence_t = UnnuSentence;

enum UnnuTokenizerType {
  TOKENIZER_TYPE_NONE(0),
  TOKENIZER_TYPE_SENTENCEPIECE(1),
  TOKENIZER_TYPE_HUGGINGFACE(2),
  TOKENIZER_TYPE_RWKV(3);

  final int value;
  const UnnuTokenizerType(this.value);

  static UnnuTokenizerType fromValue(int value) => switch (value) {
    0 => TOKENIZER_TYPE_NONE,
    1 => TOKENIZER_TYPE_SENTENCEPIECE,
    2 => TOKENIZER_TYPE_HUGGINGFACE,
    3 => TOKENIZER_TYPE_RWKV,
    _ => throw ArgumentError('Unknown value for UnnuTokenizerType: $value'),
  };
}

final class UnnuTokenizerConfig extends ffi.Struct {
  @ffi.Uint8()
  external int typeAsInt;

  UnnuTokenizerType get type => UnnuTokenizerType.fromValue(typeAsInt);

  external ffi.Pointer<ffi.Char> tokenizer_path;

  @ffi.Int()
  external int length;
}

typedef UnnuTokenizerConfig_t = UnnuTokenizerConfig;

enum UnnuOrtOperationType {
  UNNU_ORT_CNER(0),
  UNNU_ORT_EMBEDDING(1),
  UNNU_ORT_TOKENIZE(2);

  final int value;
  const UnnuOrtOperationType(this.value);

  static UnnuOrtOperationType fromValue(int value) => switch (value) {
    0 => UNNU_ORT_CNER,
    1 => UNNU_ORT_EMBEDDING,
    2 => UNNU_ORT_TOKENIZE,
    _ => throw ArgumentError('Unknown value for UnnuOrtOperationType: $value'),
  };
}

enum SoarRunFlags {
  /// No special flags set
  SOAR_SML_RUN_NONE(0),

  /// User included --self flag when running agent
  SOAR_SML_RUN_SELF(1),

  /// User ran all agents
  SOAR_SML_RUN_ALL(2),

  /// User explicitly requested corpus to update
  SOAR_SML_UPDATE_CORPUS(4),

  /// User explicitly requested corpus to not update
  SOAR_SML_DONT_UPDATE_CORPUS(8);

  final int value;
  const SoarRunFlags(this.value);

  static SoarRunFlags fromValue(int value) => switch (value) {
    0 => SOAR_SML_RUN_NONE,
    1 => SOAR_SML_RUN_SELF,
    2 => SOAR_SML_RUN_ALL,
    4 => SOAR_SML_UPDATE_CORPUS,
    8 => SOAR_SML_DONT_UPDATE_CORPUS,
    _ => throw ArgumentError('Unknown value for SoarRunFlags: $value'),
  };
}

enum SoarDataType {
  SOAR_BOOL(0),
  SOAR_INT(1),
  SOAR_FLOAT(2),
  SOAR_STRING(3),
  SOAR_ELEMENTXML(4),
  SOAR_ERROR(5);

  final int value;
  const SoarDataType(this.value);

  static SoarDataType fromValue(int value) => switch (value) {
    0 => SOAR_BOOL,
    1 => SOAR_INT,
    2 => SOAR_FLOAT,
    3 => SOAR_STRING,
    4 => SOAR_ELEMENTXML,
    5 => SOAR_ERROR,
    _ => throw ArgumentError('Unknown value for SoarDataType: $value'),
  };
}

enum UnnuEntityInfo {
  UNNU_ENTITY_UNKNOWN(0),
  UNNU_ENTITY_ANIMAL(1),
  UNNU_ENTITY_DISEASE(2),
  UNNU_ENTITY_DISCIPLINE(4),
  UNNU_ENTITY_LANGUAGE(8),
  UNNU_ENTITY_EVENT(16),
  UNNU_ENTITY_FOOD(32),
  UNNU_ENTITY_ARTIFACT(64),
  UNNU_ENTITY_MEDIA(128),
  UNNU_ENTITY_GROUP(256),
  UNNU_ENTITY_ORGANIZATION(512),
  UNNU_ENTITY_PERSON(1024),
  UNNU_ENTITY_STRUCTURE(2048),
  UNNU_ENTITY_LOCATION(4096),
  UNNU_ENTITY_PLANT(8192),
  UNNU_ENTITY_MONEY(16384),
  UNNU_ENTITY_BIOLOGY(32768),
  UNNU_ENTITY_MEASURE(65536),
  UNNU_ENTITY_SUPERSTITION(131072),
  UNNU_ENTITY_CELESTIAL(262144),
  UNNU_ENTITY_LAW(524288),
  UNNU_ENTITY_SUBSTANCE(1048576),
  UNNU_ENTITY_PART(2097152),
  UNNU_ENTITY_CULTURE(4194304),
  UNNU_ENTITY_PROPERTY(8388608),
  UNNU_ENTITY_FEELING(16777216),
  UNNU_ENTITY_PSYCHOLOGY(33554432),
  UNNU_ENTITY_RELATIONSHIP(67108864),
  UNNU_ENTITY_DATETIME(134217728),
  UNNU_ENTITY_ASSET(268435456),
  UNNU_ENTITY_UNSPECIFIED(1073741824);

  final int value;
  const UnnuEntityInfo(this.value);

  static UnnuEntityInfo fromValue(int value) => switch (value) {
    0 => UNNU_ENTITY_UNKNOWN,
    1 => UNNU_ENTITY_ANIMAL,
    2 => UNNU_ENTITY_DISEASE,
    4 => UNNU_ENTITY_DISCIPLINE,
    8 => UNNU_ENTITY_LANGUAGE,
    16 => UNNU_ENTITY_EVENT,
    32 => UNNU_ENTITY_FOOD,
    64 => UNNU_ENTITY_ARTIFACT,
    128 => UNNU_ENTITY_MEDIA,
    256 => UNNU_ENTITY_GROUP,
    512 => UNNU_ENTITY_ORGANIZATION,
    1024 => UNNU_ENTITY_PERSON,
    2048 => UNNU_ENTITY_STRUCTURE,
    4096 => UNNU_ENTITY_LOCATION,
    8192 => UNNU_ENTITY_PLANT,
    16384 => UNNU_ENTITY_MONEY,
    32768 => UNNU_ENTITY_BIOLOGY,
    65536 => UNNU_ENTITY_MEASURE,
    131072 => UNNU_ENTITY_SUPERSTITION,
    262144 => UNNU_ENTITY_CELESTIAL,
    524288 => UNNU_ENTITY_LAW,
    1048576 => UNNU_ENTITY_SUBSTANCE,
    2097152 => UNNU_ENTITY_PART,
    4194304 => UNNU_ENTITY_CULTURE,
    8388608 => UNNU_ENTITY_PROPERTY,
    16777216 => UNNU_ENTITY_FEELING,
    33554432 => UNNU_ENTITY_PSYCHOLOGY,
    67108864 => UNNU_ENTITY_RELATIONSHIP,
    134217728 => UNNU_ENTITY_DATETIME,
    268435456 => UNNU_ENTITY_ASSET,
    1073741824 => UNNU_ENTITY_UNSPECIFIED,
    _ => throw ArgumentError('Unknown value for UnnuEntityInfo: $value'),
  };
}

enum UnnuLearningProfile {
  DEITY(0),
  SPHINX(1),
  ORACLE(2),
  PHILOSOPHER(3),
  CHILD(4);

  final int value;
  const UnnuLearningProfile(this.value);

  static UnnuLearningProfile fromValue(int value) => switch (value) {
    0 => DEITY,
    1 => SPHINX,
    2 => ORACLE,
    3 => PHILOSOPHER,
    4 => CHILD,
    _ => throw ArgumentError('Unknown value for UnnuLearningProfile: $value'),
  };
}

final class UnnuLearningConfig extends ffi.Struct {
  external ffi.Pointer<ffi.Char> prompt;

  @ffi.Int()
  external int length;

  @ffi.UnsignedInt()
  external int profileAsInt;

  UnnuLearningProfile get profile =>
      UnnuLearningProfile.fromValue(profileAsInt);
}

typedef UnnuLearningConfig_t = UnnuLearningConfig;

final class UnnuOgaResult extends ffi.Struct {
  external ffi.Pointer<ffi.Char> result;

  @ffi.Int()
  external int length;
}

typedef UnnuOgaResult_t = UnnuOgaResult;
typedef OgaResultCallbackFunction = ffi.Void Function(UnnuOgaResult_t result);
typedef DartOgaResultCallbackFunction = void Function(UnnuOgaResult_t result);
typedef OgaResultCallback =
    ffi.Pointer<ffi.NativeFunction<OgaResultCallbackFunction>>;
